<resources>
    <string name="app_name">AssoGenda</string>

    <!-- Association -->
    <string name="fragment_association_main_title">My associations</string>
    <string name="activity_main_button_association">Association management</string>
    <string name="fragment_association_main_button_create_association">Create association</string>

    <!-- Association form -->
    <string name="fragment_create_association_name_title">Association name</string>
    <string name="fragment_create_association_name">Name</string>
    <string name="fragment_create_association_university_title">University</string>
    <string name="fragment_create_association_university">University name</string>
    <string name="fragment_create_association_description_title">Association description</string>
    <string name="fragment_create_association_description">Description</string>
    <string name="fragment_create_association_logo_title">Association logo</string>
    <string name="fragment_create_association_button_logo">Add a picture</string>
    <string name="fragment_create_association_button_validate">Validate</string>
    <string name="fragment_create_association_form_validation_name">Name required!</string>
    <string name="fragment_create_association_form_validation_universite">University required!</string>
    <string name="fragment_create_association_form_validation_description">Description required!</string>
    <string name="fragment_create_association_form_validation_title">Create association %1$s ?</string>
    <string name="fragment_create_association_form_validation_ok">Yes</string>
    <string name="fragment_create_association_form_validation_cancel">No</string>

    <!-- Dashboard activity -->
    <string name="AssociationDashboardActivity_upload_logo">Uploading</string>
    <string name="AssociationDashboardActivity_association_creation_success">Association created!</string>
    <string name="AssociationDashboardActivity_association_image_load_error">Cannot load picture!</string>

    <!-- Calendar -->
    <string name="activity_main_calendar_button">Agenda</string>

    <!-- Event research -->
    <string name="activity_event_research_title_info">Search events</string>
    <string name="activity_main_event_research_button">Event search</string>
    <string name="activity_event_research_button">Search</string>
    <string name="activity_event_research_start_date">Start date</string>
    <string name="activity_event_research_start_time">HStart time</string>

    <!-- Event participation -->
    <string name="activity_event_infos_participate_button">Participate</string>
    <string name="activity_event_infos_nparticipate_button">Disengagement</string>
    <string name="activity_event_infos_participate_toast">You participate to : </string>
    <string name="activity_event_infos_nparticipate_toast">You disengaged from the event </string>
    <string name="activity_event_infos_participate_date_passed_toast">The event is over !</string>

    <!-- Association research -->
    <string name="list_association_activity_search_hint">association, university…</string>

    <!-- Signup -->
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="signup_toast_connected">successfully connected !</string>

    <!-- Event creation -->
    <string name="event_create_name">Name</string>
    <string name="event_create">Create event</string>
    <string name="event_create_submit_error_message">Please make sure to fill all obligatory fields</string>
    <string name="event_create_advanced_show">Advanced options</string>
    <string name="event_create_submit_error_title">Error !</string>
    <string name="event_create_start_time">Start time</string>
    <string name="event_create_start_date">Start date</string>
    <string name="event_create_end_time">End time</string>
    <string name="event_create_end_date">End date</string>
    <string name="event_create_description">Description</string>
    <string name="event_create_location">Location</string>
    <string name="event_create_price">Price (€)</string>
    <string name="event_create_seats_available">Seats available</string>
    <string name="event_create_submit_date_error_message">The end date cannot be anterior to the start !</string>
    <string name="event_create_submit_seats_error_message">You need at least five seats available to your event !</string>
    <string name="event_create_submit_price_error_message">The price cannot be negative !</string>

    <!-- Login -->
    <string name="log_in_text">Log in to AssoGenda</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="event_list">Events list</string>
    <string name="association_followed">Followed associations </string>
    <string name="association_list">Associations list</string>


    <string-array name="event_create_event_types">
        <item>Sport</item>
        <item>Party</item>
        <item>Training</item>
        <item>Other</item>
    </string-array>
</resources>
