<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.paris10.projet.assogenda.assogenda.ui.activites.CreateEventActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/activity_create_event_layout"
        android:layout_alignParentTop="true">

        <TextView
            android:text="Event Creation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_create_event_title_textview"
            android:textAlignment="center"
            android:textSize="22sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/activity_create_event_name"
            android:hint="@string/event_create_name"
            android:fontFamily="sans-serif">
            <requestFocus />
        </EditText>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_create_event_horizontal_layout_start">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/event_create_start_time"
                android:focusable="false"
                android:id="@+id/activity_create_event_start_time" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/activity_create_event_start_date"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/event_create_start_date" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_create_event_horizontal_layout_end">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/activity_create_event_end_time"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/event_create_end_time"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/activity_create_event_end_date"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/event_create_end_date" />

        </LinearLayout>

        <TextView
            android:text="Event type :"
            android:layout_width="match_parent"
            android:id="@+id/activity_create_event_type_selection_textview"
            android:textSize="18sp"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_create_event_type_spinner" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/activity_create_event_location"
            android:hint="@string/event_create_location" />

        <Button
                    android:text="@string/event_create_advanced_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_create_event_advanced_button" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/activity_create_event_price"
            android:hint="@string/event_create_price"
            android:inputType="numberDecimal"
            android:digits="0123456789."/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/activity_create_event_seats_available"
            android:hint="@string/event_create_seats_available"
            android:inputType="numberSigned"
            android:digits="0123456789" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/activity_create_event_description"
            android:hint="@string/event_create_description" />

        <Button
            android:text="@string/event_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_create_event_submit" />


    </LinearLayout>
</RelativeLayout>
