<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.paris10.projet.assogenda.assogenda.ui.activites.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_login_layout">

        <TextView
            android:text="@string/log_in_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_textview"
            android:textSize="28sp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/activity_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/activity_login_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_label" />

        <TextView
            android:id="@+id/activity_login_to_activity_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:text="@string/sign_up_text"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>
