<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.paris10.projet.assogenda.assogenda.ui.activites.MainEventActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <Button
            android:text="@string/event_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_list_events_button"/>

        <Button
            android:text="@string/activity_main_calendar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_main_calendar_button" />

        <Button
            android:text="@string/activity_main_event_research_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_main_event_research_button"/>
    </LinearLayout>
</RelativeLayout>
